PPv09d-b20140223-r1 Revision de validaciones en Comunidades

--- a/WebContent/movimientoscomunidades.xhtml
+++ b/WebContent/movimientoscomunidades.xhtml
@@ -89,7 +89,7 @@
 										</h:panelGrid>
 									</p:panel>
 
-								<p:commandButton value="Buscar un Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>		
+								<p:commandButton value="Buscar Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>		
 
 								</h:panelGrid>
 							</p:fieldset>
