--- a/WebContent/gestionactivoscomunidad.xhtml
+++ b/WebContent/gestionactivoscomunidad.xhtml
@@ -28,23 +28,11 @@
 								<p:commandButton type="button" value="Salir" onclick="dlgConfirmaSalir.show()"/> 
 							</h:panelGrid>
 						</p:fieldset>
-						<p:panel>
-							<h:panelGrid columns="2" cellpadding="5">
-
-								<h:outputText value="IDPROV: " />
-								<p:inputText id="IDPROV" value="#{GestorMovimientosComunidades.sIDPROV}" disabled="true" />
-
-								<h:outputText value="COENGP: " />
-								<p:inputText id="COENGP" value="#{GestorMovimientosComunidades.sCOENGP}" disabled="true" />
-
-							</h:panelGrid>
-						</p:panel>
 
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
-
-								<p:commandButton value="Limpiar Plantilla" update="panel, activosComunidad" actionListener="#{GestorTablaComunidadActivo.limpiarPlantilla}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
-
+								<p:commandButton value="Limpiar Plantilla" update="panel, activosComunidad" actionListener="#{GestorActivosComunidad.limpiarPlantilla}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
+								<p:commandButton value="Dar de Baja" update="msgs, popup, COACES, activosComunidad" actionListener="#{GestorActivosComunidad.bajaActivoComunidad}"/>
 							</h:panelGrid>
 						</p:fieldset>
 
@@ -85,15 +73,15 @@
 											<h:panelGrid columns="6" cellpadding="5">
 
 												<h:outputText for="COCLDO" value="Documento: " />
-												<p:selectOneMenu id="COCLDO" value="#{GestorTablaComunidadActivo.sCOCLDO}">
+												<p:selectOneMenu id="COCLDO" value="#{GestorActivosComunidad.sCOCLDO}">
 													<f:selectItem itemLabel="Elija..." itemValue="" />
 													<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}" />
 												</p:selectOneMenu>
 
 												<h:outputText for="NUDCOM" value="Número: " />
-												<p:inputText id="NUDCOM" value="#{GestorTablaComunidadActivo.sNUDCOM}" size="10" maxlength="10"/>
+												<p:inputText id="NUDCOM" value="#{GestorActivosComunidad.sNUDCOM}" size="10" maxlength="10"/>
 
-												<p:commandButton value="Cargar" update="activosComunidad, panelComunidad, msgs, popup" actionListener="#{GestorTablaComunidadActivo.cargarComunidad}" />
+												<p:commandButton value="Cargar" update="activosComunidad, panelComunidad, msgs, popup" actionListener="#{GestorActivosComunidad.cargarComunidad}" />
 
 											</h:panelGrid>
 									  </p:panel>
@@ -102,10 +90,10 @@
 											<h:panelGrid columns="2" cellpadding="5">
 
 												<h:outputText for="NOMCOC" value="Nombre comunidad: " />
-												<p:inputText id="NOMCOC" value="#{GestorTablaComunidadActivo.sNOMCOC}" size="60" maxlength="60" disabled="true"/>
+												<p:inputText id="NOMCOC" value="#{GestorActivosComunidad.sNOMCOC}" size="60" maxlength="60" disabled="true"/>
 
 												<h:outputText for="NODCCO"  value="Correo electrónico: " />
-												<p:inputText id="NODCCO" value="#{GestorTablaComunidadActivo.sNODCCO}" size="60"  maxlength="60" disabled="true"/>
+												<p:inputText id="NODCCO" value="#{GestorActivosComunidad.sNODCCO}" size="60"  maxlength="60" disabled="true"/>
 
 											</h:panelGrid>
 									  </p:panel>
@@ -118,13 +106,13 @@
 										<p:panel >
 											<h:panelGrid columns="4" cellpadding="5">
 
-												<h:outputText for="COACES" value="Código de activo: " />
-												<p:inputMask id="COACES" value="#{GestorTablaComunidadActivo.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
-												<p:commandButton value="Dar de Alta" update="msgs, popup, COACES, activosComunidad" actionListener="#{GestorTablaComunidadActivo.altaActivoComunidad}"/>
+												<h:outputText for="COACES" value="Activo: " />
+												<p:inputMask id="COACES" value="#{GestorActivosComunidad.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
+												<p:commandButton value="Dar de Alta" update="msgs, popup, COACES, activosComunidad" actionListener="#{GestorActivosComunidad.altaActivoComunidad}"/>
 
 											</h:panelGrid>
 										</p:panel>
-									<p:commandButton value="Buscar un Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>
+									<p:commandButton value="Buscar Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>
 									</h:panelGrid>
 								</p:fieldset>
 							</h:panelGrid>
@@ -133,11 +121,11 @@
 						<p:panel id="panelTablaActivosComunidad">
 							<h:panelGrid columns="1" cellpadding="5">
 								<p:contextMenu for="activosComunidad">
-									<p:menuitem value="Dar de Baja" update="activosComunidad, COACES, popup, msgs" icon="ui-icon-check" actionListener="#{GestorTablaComunidadActivo.bajaActivoComunidad}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
+									<p:menuitem value="Dar de Baja" update="activosComunidad, COACES, popup, msgs" icon="ui-icon-check" actionListener="#{GestorActivosComunidad.bajaActivoComunidad}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
 								</p:contextMenu>
 
-								<p:dataTable id="activosComunidad" var="activo" value="#{GestorTablaComunidadActivo.tablaactivoscomunidad}" rowKey="#{activo.COACES}"
-															selection="#{GestorTablaComunidadActivo.activoseleccionadobaja}" selectionMode="single"
+								<p:dataTable id="activosComunidad" var="activo" value="#{GestorActivosComunidad.tablaactivoscomunidad}" rowKey="#{activo.COACES}"
+															selection="#{GestorActivosComunidad.activoseleccionadobaja}" selectionMode="single"
 															paginator="true" paginatorPosition="bottom" rows="10"
 															paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 															rowsPerPageTemplate="5,10,15">
@@ -178,11 +166,11 @@
 
 					<p:dialog header="Activos sin Comunidad:" widgetVar="dlgTabla" resizable="false">
 						<p:contextMenu for="activos">
-							<p:menuitem value="Seleccionar" update="form:COACES, form:popup" icon="ui-icon-check" actionListener="#{GestorTablaComunidadActivo.seleccionarActivo}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
+							<p:menuitem value="Seleccionar" update="form:COACES, form:popup" icon="ui-icon-check" actionListener="#{GestorActivosComunidad.seleccionarActivo}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
 						</p:contextMenu>
 
-						<p:dataTable id="activos" var="activo" value="#{GestorTablaComunidadActivo.tablaactivos}" rowKey="#{activo.COACES}"
-															selection="#{GestorTablaComunidadActivo.activoseleccionadoalta}" selectionMode="single"
+						<p:dataTable id="activos" var="activo" value="#{GestorActivosComunidad.tablaactivos}" rowKey="#{activo.COACES}"
+															selection="#{GestorActivosComunidad.activoseleccionadoalta}" selectionMode="single"
 															paginator="true" paginatorPosition="bottom" rows="10"
 															paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 															rowsPerPageTemplate="5,10,15">
@@ -226,25 +214,25 @@
 									<h:panelGrid columns="2" cellpadding="5">
 
 										<h:outputText for="NOPRAC" value="Provincia: " />
-										<p:inputText id="NOPRAC" value="#{GestorTablaComunidadActivo.sNOPRAC}" size="18" maxlength="18"/>
+										<p:inputText id="NOPRAC" value="#{GestorActivosComunidad.sNOPRAC}" size="18" maxlength="18"/>
 
 										<h:outputText for="NOMUIN" value="Municipio: " />
-										<p:inputText id="NOMUIN" value="#{GestorTablaComunidadActivo.sNOMUIN}" size="30" maxlength="30"/>
+										<p:inputText id="NOMUIN" value="#{GestorActivosComunidad.sNOMUIN}" size="30" maxlength="30"/>
 
 										<h:outputText for="COPOIN" value="Código Postal: " />
-										<p:inputText id="COPOIN" value="#{GestorTablaComunidadActivo.sCOPOIN}" size="5" maxlength="5"/>
+										<p:inputText id="COPOIN" value="#{GestorActivosComunidad.sCOPOIN}" size="5" maxlength="5"/>
 
 										<h:outputText for="NOVIAS" value="Nombre de la Vía: " />
-										<p:inputText id="NOVIAS" value="#{GestorTablaComunidadActivo.sNOVIAS}" size="60" maxlength="60"/>
+										<p:inputText id="NOVIAS" value="#{GestorActivosComunidad.sNOVIAS}" size="60" maxlength="60"/>
 
 										<h:outputText for="NUPOAC" value="Portal/Punto Kilométrico: " />
-										<p:inputText id="NUPOAC" value="#{GestorTablaComunidadActivo.sNUPOAC}" size="17" maxlength="17"/>
+										<p:inputText id="NUPOAC" value="#{GestorActivosComunidad.sNUPOAC}" size="17" maxlength="17"/>
 
 										<h:outputText for="NUPIAC" value="Piso: " />
-										<p:inputText id="NUPIAC" value="#{GestorTablaComunidadActivo.sNUPIAC}" size="11" maxlength="11"/>
+										<p:inputText id="NUPIAC" value="#{GestorActivosComunidad.sNUPIAC}" size="11" maxlength="11"/>
 
 										<h:outputText for="NUPUAC" value="Puerta: " />
-										<p:inputText id="NUPUAC" value="#{GestorTablaComunidadActivo.sNUPUAC}" size="17" maxlength="17"/>
+										<p:inputText id="NUPUAC" value="#{GestorActivosComunidad.sNUPUAC}" size="17" maxlength="17"/>
 
 									</h:panelGrid>
 								</p:panel>
@@ -252,8 +240,8 @@
 								<p:panel >
 									<h:panelGrid columns="2" cellpadding="5">
 
-										<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorTablaComunidadActivo.buscaActivos}" oncomplete="dlgTabla.show()"/>
-										<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorTablaComunidadActivo.limpiarPlantillaActivo}" />
+										<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorActivosComunidad.buscaActivos}" oncomplete="dlgTabla.show()"/>
+										<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorActivosComunidad.limpiarPlantillaActivo}" />
 
 									</h:panelGrid>
 								</p:panel>
