--- a/WebContent/gestioncuentascomunidad.xhtml
+++ b/WebContent/gestioncuentascomunidad.xhtml
@@ -75,7 +75,7 @@
 									<p:panel >
 										<h:panelGrid columns="3" cellpadding="5">
 
-											<h:outputText for="COACES" value="Código de activo: "/>
+											<h:outputText for="COACES" value="Activo: "/>
 											<p:inputMask id="COACES" value="#{GestorCuentasComunidades.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
 
 											<p:commandButton value="Buscar Comunidad" update="cuentas, msgs, popup, panel" actionListener="#{GestorCuentasComunidades.buscarComunidad}"/>	
@@ -83,7 +83,7 @@
 										</h:panelGrid>
 									</p:panel>
 
-								<p:commandButton value="Buscar un Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>		
+								<p:commandButton value="Buscar Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>		
 
 								</h:panelGrid>
 							</p:fieldset>
