PPv09d-b20140225-r1 Implementación completa: R4 y R2 Implementación parcial: R1 Detalles cosméticos varios.

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -24,6 +24,8 @@
 						</p:submenu>
 						
 						<p:submenu label="Pagos" async="true">
+							<p:menuitem value="Abono"
+								url="abono.xhtml" icon="ui-icon-signal-cart" />
 							<p:menuitem value="Pago por Conexión"
 								url="pagoconexion.xhtml" icon="ui-icon-signal-diag" />
 							<p:menuitem value="Pago Simple"
@@ -53,6 +55,8 @@
 							</p:submenu>
 
 							<p:submenu label="Cuotas">
+								<p:menuitem value="Lista de Cuotas" 
+									url="listacuotas.xhtml" icon="ui-icon-search" />
 								<p:menuitem value="Registrar"
 									url="registracuota.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
@@ -72,6 +76,8 @@
 									url="erroresferencias.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							<p:submenu label="Impuestos y tasas">
+								<p:menuitem value="Lista de Impuestos" 
+									url="listaimpuestos.xhtml" icon="ui-icon-search" />
 								<p:menuitem value="Registrar"
 									url="registraimpuesto.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
