PPv09d-b20140225-r2 Cambio menor

--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -416,7 +416,7 @@
 										</h:panelGrid>
 									</p:fieldset>
 					</p:dialog>
-					<p:dialog header="Filtrar Gastos Activo: " widgetVar="dlgFiltrarGastoProvision" resizable="false">  
+					<p:dialog header="Filtrar Gastos Provision: " widgetVar="dlgFiltrarGastoProvision" resizable="false">  
 									<p:fieldset legend="Filtro">
 										<h:panelGrid columns="1" cellpadding="5">
 											<p:panel id="panelFiltrarGastosProvision">
