PPv09d-b20140312-r1 -Implementación parcial:R1 (Pagos Comunidades) -Modificado el comportamiento de los combobox de tipo de documento en comunidades.

--- a/WebContent/gestioncuentascomunidad.xhtml
+++ b/WebContent/gestioncuentascomunidad.xhtml
@@ -97,7 +97,7 @@
 												<h:outputText for="COCLDO" value="Documento: " />
 												<p:selectOneMenu id="COCLDO" value="#{GestorCuentasComunidades.sCOCLDO}">
 													<f:selectItem itemLabel="Elija..." itemValue="" />
-													<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}" />
+													<f:selectItems value="#{GestorCuentasComunidades.tiposcocldoHM}" />
 												</p:selectOneMenu>
 
 												<h:outputText for="NUDCOM" value="Número: " />
