--- a/WebContent/listacomunidades.xhtml
+++ b/WebContent/listacomunidades.xhtml
@@ -74,7 +74,7 @@
 													<h:outputText for="COCLDO" value="Documento: "/>
 													<p:selectOneMenu id="COCLDO" value="#{GestorListaComunidades.sCOCLDO}">
 														<f:selectItem itemLabel="Elija..." itemValue=""/>
-														<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}"/>
+														<f:selectItems value="#{GestorListaComunidades.tiposcocldoHM}"/>
 													</p:selectOneMenu>
 													<h:outputText for="NUDCOM" value="Número: "/>
 													<p:inputText id="NUDCOM" value="#{GestorListaComunidades.sNUDCOM}" size="10" maxlength="10"/>
