--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -30,6 +30,8 @@
 								url="pagoconexion.xhtml" icon="ui-icon-signal-diag" />
 							<p:menuitem value="Pago Simple"
 								url="pagosimple.xhtml" icon="ui-icon-signal-cart" />
+							<p:menuitem value="Pago Comunidad"
+								url="pagocomunidad.xhtml" icon="ui-icon-signal-cart" />
 						</p:submenu>
 
 						<p:submenu label="Provisiones">
