--- a/WebContent/movimientoscomunidades.xhtml
+++ b/WebContent/movimientoscomunidades.xhtml
@@ -103,7 +103,7 @@
 											<h:outputText for="COCLDO" value="Documento: "/>
 											<p:selectOneMenu id="COCLDO" value="#{GestorMovimientosComunidades.sCOCLDO}">
 												<f:selectItem itemLabel="Elija..." itemValue=""/>
-												<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}"/>
+												<f:selectItems value="#{GestorMovimientosComunidades.tiposcocldoHM}"/>
 											</p:selectOneMenu>
 
 											<h:outputText for="NUDCOM" value="Número: "/>
