--- a/WebContent/gestionactivoscomunidad.xhtml
+++ b/WebContent/gestionactivoscomunidad.xhtml
@@ -75,7 +75,7 @@
 												<h:outputText for="COCLDO" value="Documento: " />
 												<p:selectOneMenu id="COCLDO" value="#{GestorActivosComunidad.sCOCLDO}">
 													<f:selectItem itemLabel="Elija..." itemValue="" />
-													<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}" />
+													<f:selectItems value="#{GestorActivosComunidad.tiposcocldoHM}" />
 												</p:selectOneMenu>
 
 												<h:outputText for="NUDCOM" value="Número: " />
