--- a/WebContent/registracomunidad.xhtml
+++ b/WebContent/registracomunidad.xhtml
@@ -80,7 +80,7 @@
 												<h:outputText for="COCLDO" value="Documento: "/>
 												<p:selectOneMenu id="COCLDO" value="#{GestorComunidades.sCOCLDO}">
 													<f:selectItem itemLabel="Elija..." itemValue=""/>
-													<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}"/>
+													<f:selectItems value="#{GestorComunidades.tiposcocldoHM}"/>
 												</p:selectOneMenu>
 
 												<h:outputText for="NUDCOM" value="Número: "/>
