--- a/WebContent/gestioncuentascomunidad.xhtml
+++ b/WebContent/gestioncuentascomunidad.xhtml
@@ -76,9 +76,9 @@
 										<h:panelGrid columns="3" cellpadding="5">
 
 											<h:outputText for="COACES" value="Activo: "/>
-											<p:inputMask id="COACES" value="#{GestorCuentasComunidades.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
+											<p:inputText id="COACES" value="#{GestorCuentasComunidades.sCOACES}" size="10" maxlength="9"/>
 
-											<p:commandButton value="Buscar Comunidad" update="cuentas, msgs, popup, panel" actionListener="#{GestorCuentasComunidades.buscarComunidad}"/>	
+											<p:commandButton value="Buscar Comunidad" update="cuentas, msgs, popup, panel, COACES" actionListener="#{GestorCuentasComunidades.buscarComunidad}"/>	
 
 										</h:panelGrid>
 									</p:panel>
