--- a/WebContent/listareferencias.xhtml
+++ b/WebContent/listareferencias.xhtml
@@ -32,7 +32,7 @@
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
 
-								<p:commandButton value="Detalles" update="panel, msgs, popup" actionListener="#{GestorListaReferencias.registraDatos}" />
+								<p:commandButton value="Detalles" update="panel, msgs, popup" actionListener="#{GestorListaReferencias.cargarDetallesReferencia}" />
 								<p:commandButton value="Limpiar Plantilla" update="panel" actionListener="#{GestorListaReferencias.limpiarPlantilla}" />
 
 							</h:panelGrid>
