--- a/WebContent/registracomunidad.xhtml
+++ b/WebContent/registracomunidad.xhtml
@@ -159,7 +159,7 @@
 											<h:panelGrid columns="4" cellpadding="5">
 
 												<h:outputText for="COACES" value="Código de activo: "/>
-												<p:inputMask id="COACES" value="#{GestorComunidades.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
+												<p:inputText id="COACES" value="#{GestorComunidades.sCOACES}" size="10" maxlength="9"/>
 
 												<p:commandButton value="Comprobar" update="msgs, popup, COACES, activos" actionListener="#{GestorComunidades.comprobarActivo}"/>
 
