--- a/WebContent/errorescomunidades.xhtml
+++ b/WebContent/errorescomunidades.xhtml
@@ -134,7 +134,7 @@
 												<h:outputText for="COCLDO" value="Documento: "/>
 												<p:selectOneMenu id="COCLDO" value="#{GestorErroresComunidades.sCOCLDO}" disabled="#{GestorErroresComunidades.bRCOCLDO}">
 													<f:selectItem itemLabel="Elija..." itemValue=""/>
-													<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}"/>
+													<f:selectItems value="#{GestorErroresComunidades.tiposcocldoHM}"/>
 												</p:selectOneMenu>
 
 												<h:outputText for="NUDCOM" value="Número: "/>
@@ -318,7 +318,7 @@
 											<h:outputText for="COCLDOB" value="Documento: "/>
 											<p:selectOneMenu id="COCLDOB" value="#{GestorErroresComunidades.sCOCLDOB}">
 												<f:selectItem itemLabel="Elija..." itemValue=""/>
-												<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}"/>
+												<f:selectItems value="#{GestorErroresComunidades.tiposcocldoHM}"/>
 											</p:selectOneMenu>
 
 											<h:outputText for="NUDCOMB" value="Número: "/>
